# Vault-OS-Facility

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vault_os_facility_docs.md
Schema/: access.schema.json  common.schema.json  devices.schema.json  events.schema.json  facility.schema.json  invites.schema.json  personnel.schema.json  vault.schema.json
facility/: __init__.py  __main__.py  adapters.py  bootstrap.py  cli.py  core.py  demo.py  persistence.py
facility/operations/: __init__.py  access.py  devices.py  events.py  invites.py  personnel.py  vault.py
tests/: __init__.py  test_facility.py  test_persistence.py
